implemented jwt-auth
